[package]
name = "password-characters"
version = "1.0.0"
authors = ["David Young <david@thedavidyoung.co.uk>"]
edition = "2018"
repository = "https://github.com/sciguy16/password-characters"
description = "A utility to help with the \"enter the 12th, 35th, and 63rd characters from your password\" situations"
license = "GPL3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
